# tai

./: Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: coverage.yaml  crates.yaml  daily-test.yaml  release.yaml
src/: main.rs
src/about/: mod.rs
src/version/: mod.rs
