[package]
name = "tai"
version = "0.1.0"
edition = "2021"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]
description = "T.A.I Terminal with Artificial Intelligence in rust!"
repository = "https://github.com/waldirborbajr/tai"
homepage = "https://github.com/waldirborbajr/tai"
readme = "README.md"
keywords = ["tai", "artificial intelligence", "gpt", "chat"]
license = "MIT"

[[bin]]
name = "tai"
path = "src/main.rs"

[build]
rustflags = ["-z", "threads=8"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 'z'   # only have smaller size after strip
rpath = true
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
